--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
@@ -82,8 +83,9 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // WorkManager
     implementation "androidx.work:work-runtime-ktx:$work_version"
