--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         navigation_version = "2.3.4"
         recycler_version = "1.1.0"
         retrofit_version = "2.9.0"
-        room_version = "2.2.6"
+        room_version = "2.3.0-rc01"
         work_version = "2.5.0"
     }
     repositories {
@@ -24,7 +24,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.4"
     }
 }
 
